[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.2"]

[project]
authors = [{name = "Starwort"}, {name = "salt-die"}]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "requests",
  "beautifulsoup4",
  "typing",
  "typing_extensions",
]
description = "A helper package for Advent of Code"
name = "aoc_helper"
requires-python = ">=3.6"
urls = {Homepage = "https://github.com/Starwort/aoc_helper"}
version = "1.8.11"

[project.readme]
content-type = "text/markdown"
file = "README.md"

[project.scripts]
aoc = "aoc_helper.main:cli"

[project.optional-dependencies]
cli = ["click", "click-aliases"]
fancy = ["rich"]
full = ["click", "click-aliases", "rich"]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages]
find = {namespaces = false}
